--- a/config.example.toml
+++ b/config.example.toml
@@ -2,7 +2,7 @@
 
 # 日志配置
 [log]
-    # 日志等级 all.全部日志, prod.一般日志, info.正常日志
+    # 日志等级 all.全部日志, prod.一般日志, info.正常日志, error.错误日志 (post 数据过大时, 建议设置成 error)
     level = "all"
     # 日志保存目录,会在此目录下生成一个当天的日志文件
     path = "logs"
@@ -101,7 +101,7 @@
             name = "post"
             # 是否转换
             convert = true
-            # 每次更新条数(留空或 < 2, 则默认为 1 条)
+            # 每次更新条数(留空或 < 2, 则默认为 1 条; 数据过大时, 建议设置为 1, 否则可能会导致 Killed)
             batch = 100
             # 取 >= PID 的数据。当上次转换出错时, 记录此 PID, 方便再次导入
             last_pid = 0
