--- a/config.example.toml
+++ b/config.example.toml
@@ -2,7 +2,7 @@
 
 # 日志配置
 [log]
-    # 日志等级 all.全部日志, prod.一般日志, info.正常日志, error.错误日志 (post 数据过大时, 建议设置成 error)
+    # 日志等级 all.全部日志, prod.一般日志, info.正常日志, error.错误日志
     level = "all"
     # 日志保存目录,会在此目录下生成一个当天的日志文件
     path = "logs"
@@ -90,7 +90,7 @@
             name = "thread"
             # 是否转换
             convert = true
-            # 每次更新条数(留空或 < 2, 则默认为 1 条)
+            # 每次更新条数(留空或 < 2, 则默认为 1 条; 数据过大时, 建议设置为 1, 否则可能会导致 Killed)
             batch = 100
             # 取 >= TID 的数据。当上次转换出错时, 记录此 TID, 方便再次导入
             last_tid = 0
@@ -160,13 +160,13 @@
         delete_user_power = "1,2"
 
     [extension.user]
-        # 是否修正用户主题数和帖子数(帖子数=主题+回复),比较耗时
+        # 是否修正用户主题数和帖子数(帖子数=主题+回复), 非常耗时
         total = true
         # 修正 gid 为 101 的用户及用户组
         normal_user = true
 
     [extension.thread_post]
-        # 是否修正主题的 lastpid 和 lastuid,比较耗时
+        # 是否修正主题的 lastpid 和 lastuid, 比较耗时
         fix_last = true
         # 是否修正主题内附件统计数量
         thread_attach_total = true
