--- a/config.example.toml
+++ b/config.example.toml
@@ -29,8 +29,8 @@
         host = "127.0.0.1"
         port = "3306"
         user = "root"
-        pass = "123456"
-        name = "dx"
+        pass = ""
+        name = "discuzx"
         prefix = "pre_"
         charset = "utf8"
         debug = false    # 日志调试,建议关闭
@@ -41,8 +41,8 @@
         host = "127.0.0.1"
         port = "3306"
         user = "root"
-        pass = "123456"
-        name = "dx"
+        pass = ""
+        name = "discuzx"
         prefix = "pre_ucenter_"
         charset = "utf8"
         debug = false    # 日志调试,建议关闭
@@ -168,7 +168,7 @@
     [extension.thread_post]
         # 是否修正主题的 lastpid 和 lastuid, 比较耗时
         fix_last = true
-        # 是否修正主题内附件统计数量
-        thread_attach_total = true
         # 是否修正帖子内附件统计数量
         post_attach_total = true
+        # 是否修正主题内附件统计数量
+        thread_attach_total = true
