--- a/config.example.toml
+++ b/config.example.toml
@@ -56,8 +56,12 @@
             name = "user"
             # 是否转换
             convert = true
-            # 每次更新条数(留空或 < 2, 则默认为 1 条)
+            # 每次更新条数(留空或 < 2, 则默认为 1 条), 当 ucenter 与 discuz!X 不同一个库中, batch 则默认为 1 条, 不作批量导入
             batch = 100
+            # 去除 email 的唯一索引(Discuz!X 遗留问题, 若存在多用户用同一个 email 时,则需要去除索引)
+            # 建议先 false, 用工具进去 MySQL 执行 SELECT count(*) c,uid,email FROM `pre_common_member` GROUP BY email ORDER BY `c` DESC
+            # 若 c > 1 的数据很多, 则可以开启; 否则, 可以手动将重复的 email 修改掉, 不必开启
+            drop_index_email = false
 
         # 用户组表
         [tables.xiuno.group]
